[gd_scene load_steps=2 format=3 uid="uid://bfiot0pq70hsj"]

[ext_resource type="Script" path="res://scripts/slotvar.gd" id="1_riqjt"]

[node name="SlotVar" type="Button"]
offset_right = 64.0
offset_bottom = 32.0
toggle_mode = true
script = ExtResource("1_riqjt")

[connection signal="button_down" from="." to="." method="_on_button_down"]
